feat(add): keywords

--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -2,6 +2,18 @@
 
 <meta name="Description" content="{{ $params.description | default .Site.Params.description }}">
 
+{{- $keywords := .Keywords -}}
+{{- if not $keywords -}}
+{{- if .IsPage | and .Params.tags -}}
+{{- $keywords = .Params.tags -}}
+{{- else -}}
+{{- $keywords = .Site.Params.keywords -}}
+{{- end -}}
+{{- end -}}
+{{- with $keywords -}}
+<meta name="keywords" content='{{ delimit . ", " }}' />
+{{- end -}}
+
 {{- template "_internal/opengraph.html" . -}}
 {{- template "_internal/twitter_cards.html" . -}}
 
