--- a/layouts/partials/head/seo.html
+++ b/layouts/partials/head/seo.html
@@ -2,6 +2,15 @@
 
 {{- with .Site.Params.verification.google -}}
     <meta name="google-site-verification" content="{{ . }}" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '{{ . }}');
+    </script>
 {{- end -}}
 {{- with .Site.Params.verification.bing -}}
     <meta name="msvalidate.01" content="{{ . }}" />
